--- a/MaterialStorage/MaterialStorage/MaterialStorage.csproj
+++ b/MaterialStorage/MaterialStorage/MaterialStorage.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
