Add DbContext and SQL database related data, change precision for decimal data types,

--- a/MaterialStorage/MaterialStorage/appsettings.json
+++ b/MaterialStorage/MaterialStorage/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": null,
+  "ConnectionStrings": {
+    "DBConnection": "server=(localdb)\\MSSQLLocalDB;database=ManufacturingDb;Trusted_Connection=true"
+  }
 }
